drop in redis,prep for celery

--- a/{{cookiecutter.app_name}}/.env.example
+++ b/{{cookiecutter.app_name}}/.env.example
@@ -8,3 +8,7 @@ LOG_LEVEL=debug
 SECRET_KEY=not-so-secret
 # In production, set to a higher number, like 31556926
 SEND_FILE_MAX_AGE_DEFAULT=0
+
+#Celery
+CELERY_BROKER_URL = 'redis://redis:6379/0'
+CELERY_RESULT_BACKEND = 'redis://redis:6379/0'
