--- a/{{cookiecutter.app_name}}/package.json
+++ b/{{cookiecutter.app_name}}/package.json
@@ -33,7 +33,16 @@
     "@fortawesome/fontawesome-free": "6.7.2",
     "bootstrap": "5.3.5",
     "jquery": "3.7.1",
-    "@popperjs/core": "2.11.8"
+    "@popperjs/core": "2.11.8",
+    "datatables.net-bs5": "^2.2.2",
+    "datatables.net-buttons-bs5": "^3.2.2",
+    "datatables.net-colreorder-bs5": "^2.0.4",
+    "datatables.net-datetime": "^1.5.5",
+    "datatables.net-responsive-bs5": "^3.0.4",
+    "datatables.net-searchbuilder-bs5": "^1.8.2",
+    "datatables.net-select-bs5": "^3.0.0",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.18"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
