launch flower with dev

--- a/{{cookiecutter.app_name}}/docker-compose.yml
+++ b/{{cookiecutter.app_name}}/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     image: "{{cookiecutter.app_name}}-development"
     depends_on:
       - redis
+      - flower
     ports:
       - "5000:5000"
       - "2992:2992"
