--- a/{{cookiecutter.app_name}}/package.json
+++ b/{{cookiecutter.app_name}}/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "5.3.5",
     "jquery": "3.7.1",
     "@popperjs/core": "2.11.8",
+    "datatables.net": "^2.2.2",
     "datatables.net-bs5": "^2.2.2",
     "datatables.net-buttons-bs5": "^3.2.2",
     "datatables.net-colreorder-bs5": "^2.0.4",
